--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DatesAvailableDb": "mongodb://localhost:27017"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
